# Redust

./: .gitignore  AGENTS.md  Cargo.toml  README.md  command.md  future.md  redust.rdb  redust.rdb.corrupt.1765006127  redust.rdb.corrupt.1765007213  redust.rdb.corrupt.1765007284  review.md  roadmap.md  todo.md
.github/workflows/: dev-tests.yml  main-tests.yml  release.yml
doc/: rdb.md
src/: command.rs  hyperloglog.rs  lib.rs  main.rs  resp.rs  scripting.rs  server.rs  storage.rs
tests/: admin_commands.rs  auth.rs  auth_basic.rs  bigkey_collections_limit.rs  env_guard.rs  hyperloglog.rs  lua_scripting.rs  maxmemory_lru.rs  maxvalue_limit.rs  persistence.rs  pubsub.rs  rdb_persistence.rs  redis_compat.rs  scan_and_keys.rs  server_basic.rs  standard_set_get.rs  transaction.rs  zset.rs
