[package]
name = "redust"
version = "0.1.0"
edition = "2021"

[dependencies]
dashmap = "6.1.0"
tokio = { version = "1", features = ["full"] }
rand = "0.8"

log = "0.4"
env_logger = "0.11"
ordered-float = "3.9"
mlua = { version = "0.9", features = ["lua54", "vendored"] }
sha1 = "0.10"
hex = "0.4"

[dev-dependencies]
redis = { version = "0.25", features = ["tokio-comp"] }
serial_test = "3"
